syntax = "proto3";

package inventory;
option java_outer_classname = "InventoryProto";

service InventoryService {
  rpc createInventory(CreateInventoryRequest) returns (InventoryResponse);
}

message InventoryRequest {
  string variantId = 1;
  string productId = 2;
  string sku = 3;
  string location = 4;
  int32 stock = 5;
}

message CreateInventoryRequest {
  InventoryRequest inventory = 1;
}

message InventoryResponse {
  bool success = 1;
  string message = 2;
  string inventoryId = 3;
}

message GetInventoryRequest {
  string productId = 1;
  string variantId = 2;
}

message GetInventoryResponse {
  int32 stock = 1;
}