syntax = "proto3";

package product;
option java_outer_classname = "ProductProto";

service ProductService {
  rpc validateProduct(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  string productId = 1;
  string variantId = 2;
}

message ProductResponse {
  bool success = 1;
  bool valid = 2;
  string message = 3;
}